Fixed dialogs not showing up the second time you try to open them.

--- a/src/app/baby/shower/shower.component.css
+++ b/src/app/baby/shower/shower.component.css
@@ -5,3 +5,7 @@
 .twentyFivePxMargin {
     margin-bottom: 25px;
 }
+
+.tenPxMargin {
+    margin-bottom: 10px;
+}
